# ax-tree-parsers

./: .gitignore  build.sh  deps.d.ts  dump-tree.ts  package-lock.json  package.json  readme.md  tsconfig.json  vite.config.js
.github/workflows/: release.yml
atspi/: README.md  tsconfig.json
atspi/src/: dump-tree.ts
linux-at/: .gitignore  README.md
linux-at/src/: dump-tree.ts
linux-ax/: README.md  package-lock.json  package.json  tsconfig.json
linux-ax/src/: dump-tree.ts
mac-at/: README.md  run.py
mac-at/macapptree/: requirements.txt
mac-at/macapptree/macapptree/: __init__.py  apps.py  extractor.py  files.py  run.py  uielement.py
mac-ax/: .gitignore  README.md  dump-tree.py  requirements.txt
mac-ax/macapptree/: .gitignore  LICENSE  README.md  pyproject.toml
mac-ax/macapptree/macapptree/: exceptions.py  extractor.py  launch_app.py  main.py  run.py  screenshot_app_window.py  uielement.py  window_tools.py
win-ax/: README.md  dump-tree.py  requirements.txt
