[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "macapptree"
version = "0.0.1"
dependencies = [
    "atomacos==3.3.0",
    "ollama==0.1.6",
    "pytest==7.4.4",
    "pyobjc==10.3.1",
    "unidecode==1.3.8"
]
authors = [
  { name="Maksym Shamrai", email="mshamrai@macpaw.com" },
]
description = "macOS accessibility parser"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
]

[project.urls]
Homepage = "https://github.com/MacPaw/macapptree"
Issues = "https://github.com/MacPaw/macapptree/issues"